--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.5.1",
     "cors": "^2.8.5",
     "express": "^4.18.2",
-    "mongodb": "^6.3.0"
+    "mongodb": "^6.3.0",
+    "mongoose": "^8.1.1"
   }
 }
